# AgentAuthProxy

./: .gitignore  pyproject.toml
agent_auth_proxy/: agent_auth_proxy.py  cancel_wait_redirect.py
agentsitter/: cancel_wait_redirect.py  cli.py
agentsitter/app/: server.py
agentsitter/app/static/: app.js  manifest.json  sw.js
