[project]
name = "agent-auth-proxy"
version = "0.1.0"
description = "An http proxy for ai agent computer use environments that provides granular control around the types of web requests agents can make."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mitmproxy>=11.1.0",
]

[tool]
uv.package = true

[project.scripts]
agent_auth_proxy = "agent_auth_proxy.agent_auth_proxy:app"
