[project]
name = "agentsitter"
version = "0.1.0"
description = "An http proxy for ai agent computer use environments that provides granular control around the types of web requests agents can make."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.5.2",
    "fh-frankenui>=0.0.3",
    "mitmproxy>=11.1.0",
    "monsterui>=1.0.19",
    "python-fasthtml>=0.12.15",
    "pywebpush>=2.0.3",
    "requests>=2.32.3",
    "sseclient-py>=1.8.0",
    "starlette>=0.46.2",
    "uvicorn>=0.34.2",
]

[tool]
uv.package = true

[project.scripts]
agentsitter = "agentsitter.cli:cli"
server = "agentsitter.app.server:start"
